[project]
name = "lob-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nathanxli", email = "nathan.nxli@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "sortedcontainers>=2.4.0",
]

[project.scripts]
lob-simulator = "lob_simulator:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
